Add GitFS and the monitoring role

--- a/salt/config/standalone.conf
+++ b/salt/config/standalone.conf
@@ -1,4 +1,16 @@
 file_client: local
+
+fileserver_backend:
+  - roots
+  - git
+
 file_roots:
   base:
     - /opt/reynholm-ops/salt
+    - /srv/salt
+    - /srv/spm/salt
+
+gitfs_remotes:
+  - https://github.com/saltstack-formulas/sensu-formula.git
+  - https://github.com/saltstack-formulas/redis-formula.git
+  - https://github.com/saltstack-formulas/rabbitmq-formula.git
