Reorganize salt files, add pillars, configure sensu

--- a/salt/config/minion.conf
+++ b/salt/config/minion.conf
@@ -6,11 +6,7 @@ fileserver_backend:
 
 file_roots:
   base:
-    - /opt/reynholm-ops/salt/states
-
-pillar_roots:
-  base:
-    - /opt/reynholm-ops/salt/pillars
+    - /opt/reynholm-ops/salt
 
 gitfs_remotes:
   - git://github.com/saltstack-formulas/sensu-formula.git
