Use saltstack bootstrap

--- a/salt/config/minion.conf
+++ b/salt/config/minion.conf
@@ -6,7 +6,11 @@ fileserver_backend:
 
 file_roots:
   base:
-    - /opt/reynholm-ops/salt
+    - /opt/reynholm-ops/salt/states
+
+pillar_roots:
+  base:
+    - /opt/reynholm-ops/salt/pillars
 
 gitfs_remotes:
   - git://github.com/saltstack-formulas/sensu-formula.git
