Change salt config to work remotely

--- a/provision/salt-minion.conf
+++ b/provision/salt-minion.conf
@@ -1,18 +1,16 @@
 file_client: local
 
 fileserver_backend:
-  - roots
   - git
 
-file_roots:
-  base:
-    - /opt/reynholm-ops/salt/states
-
-pillar_roots:
-  base:
-    - /opt/reynholm-ops/salt/pillars
-
 gitfs_remotes:
+  - git://github.com/emedvedev/reynholm-ops.git
+    - root: salt/states
   - git://github.com/emedvedev/sensu-formula.git
   - git://github.com/saltstack-formulas/redis-formula.git
   - git://github.com/saltstack-formulas/rabbitmq-formula.git
+
+ext_pillar:
+  - git:
+    - master https://github.com/emedvedev/reynholm-ops.git:
+      - root: salt/pillar
