Fix the minion config typo

--- a/provision/salt-minion.conf
+++ b/provision/salt-minion.conf
@@ -4,7 +4,7 @@ fileserver_backend:
   - git
 
 gitfs_remotes:
-  - git://github.com/emedvedev/reynholm-ops.git
+  - git://github.com/emedvedev/reynholm-ops.git:
     - root: salt/states
   - git://github.com/emedvedev/sensu-formula.git
   - git://github.com/saltstack-formulas/redis-formula.git
